major changes tmdb revamped && style

-- asigned download link corresponds to the ep. only fetch data if download link available. some css fixes and changes 


--removed effect from swiper(choppyness)

--added redis caching
2/10/23